# potential-mavlink

./: .env_ld_path  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  docker-compose.yml  install_c_board.sh  package.xml  start.sh  start_serial_node.sh
include/: mavlink.hpp
include/mavlink/: mavlink_types.h  msgmap.hpp
include/mavlink/msg/: mavlink.h  mavlink_msg_aim.hpp  mavlink_msg_imu.hpp  mavlink_msg_ui.hpp  msg.h  msg.hpp  version.h
include/serial_mav/msg/: gtestsuite.hpp  mavlink.h  mavlink_msg_aim.h  mavlink_msg_imu.hpp  mavlink_msg_referee.hpp  msg.h  msg.hpp  testsuite.h  version.h
src/: main.cpp  mavlink.cpp  serival_rm.cpp
src/mavlink/: package.xml  setup.cfg  setup.py
src/mavlink/mavlink/: __init__.py  mavlink.py  mavlink_node.py
src/rm_interfaces/: CMakeLists.txt  package.xml
src/rm_interfaces/msg/: Armor.msg  Cboard.msg  GimbalCmd.msg  Referee.msg  Target.msg
src/serial_mav/: CMakeLists.txt  package.xml
src/serial_mav/include/: mavlink.hpp
src/serial_mav/include/mavlink/: message.hpp
src/serial_mav/include/mavlink/lib/msg/: gtestsuite.hpp  mavlink.h  mavlink_msg_auto_aim.hpp  mavlink_msg_chassis_speed.h  mavlink_msg_current_position.hpp  mavlink_msg_imu.h  mavlink_msg_imu.hpp  mavlink_msg_insta360.hpp  mavlink_msg_referee.h  testsuite.h  version.h
src/serial_mav/include/mavlink/msg/: gtestsuite.hpp  mavlink.h  mavlink_msg_aim.hpp  mavlink_msg_auto_aim.h  mavlink_msg_chassis_speed.hpp  mavlink_msg_current_position.h  mavlink_msg_imu.h  mavlink_msg_insta360.h  mavlink_msg_nav_cmd_vel.h  mavlink_msg_nav_cmd_vel.hpp  mavlink_msg_odometry.h  mavlink_msg_odometry.hpp  mavlink_msg_odomtery.h  mavlink_msg_odomtery.hpp  mavlink_msg_referee.h  mavlink_msg_referee.hpp  mavlink_msg_target_pose.h  mavlink_msg_target_pose.hpp  mavlink_msg_target_position.h  mavlink_msg_target_position.hpp  mavlink_msg_ui.h  mavlink_msg_ui.hpp  msg.h  msg.hpp  testsuite.h  version.h
src/serial_mav/src/: main.cpp  mavlink.cpp
src/serial_mav_py/: package.xml  setup.cfg  setup.py
src/serial_mav_py/serial_mav_py/: __init__.py  mavlink_node.py
