<?xml version="1.0"?>
<package format="3">
  <name>serial_mav_py</name>
  <version>0.0.1</version>
  <description>ROS2 Python package for MAVLink serial forwarding.</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>pyserial</depend>
  <depend>fastcrc</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
